--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,10 +25,10 @@ serde_json = "1"
 specta = "=2.0.0-rc.22"
 specta-typescript = "0.0.9"
 tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
-twitch_api = { version = "0.7.0", features = ["eventsub", "helix", "reqwest"] }
+twitch_api = { version = "~0.7.0", features = ["eventsub", "helix", "reqwest"] }
 twitch_oauth2 = { version = "0.15.1", features = ["client"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
-tokio-tungstenite = { version = "0.26.1", features = ["native-tls", "url"] }
+tokio-tungstenite = { version = "~0.28", features = ["native-tls", "url"] }
 reqwest = "0.12.12"
 tauri-plugin-store = "2"
 futures = "0.3.31"
