--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ color-eyre = "0.6.3"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tauri-svelte-synced-store = { git = "https://github.com/synthlabs/tauri-svelte-synced-store.git" }
+lazy_static = "1.5.0"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
