--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "dependencies": {
         "@tauri-apps/api": "^2.9.1",
         "@tauri-apps/plugin-opener": "^2.5.2",
-        "@tauri-apps/plugin-store": "~2.2.1",
-        "@tauri-apps/plugin-updater": "~2.9.0",
-        "@tauri-apps/plugin-window-state": "~2.2.3",
+        "@tauri-apps/plugin-store": "^2.4.1",
+        "@tauri-apps/plugin-updater": "^2.9.0",
+        "@tauri-apps/plugin-window-state": "^2.4.1",
         "tauri-svelte-synced-store": "github:synthlabs/tauri-svelte-synced-store"
     },
     "packageManager": "pnpm@10.24.0"
